add flow auth test
